@@ -1,5 +1,11 @@
 Revision history for File-Unpack
 
+	jw, Sat Sep 11 22:01:49 CEST 2010
+	new feature in mime(): attempt full file access
+	not only if flm reports, currupt, but also when it reports
+	a/octet-stream. this helps to recognize a/x-iso9660-image
+	Added .iso by including my old unpack_iso.pl as a helper.
+
 0.26	jw, Thu Sep  9 19:26:21 CEST 2010
 	Added .upx; we are testing all application/*-executable for upx to get the mime type.
 	Fixed test results on SLE-11, 02-mime.t now can match regexp too.
